--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>Bonjour!</title>
-
   </head>
   <body>
     <script type="module" src="/src/renderer.ts"></script>
